# maw-rs

./: .gitignore  Cargo.toml  README.md  install.sh
crates/maw-cli/: Cargo.toml  build.rs
crates/maw-cli/src/: lib.rs  main.rs
crates/maw-cli/src/core_impl/: attach_private_tests.rs  mod.rs  part01.rs  part02.rs  part03.rs  part04.rs  part05.rs  part06.rs  part07.rs  part08.rs  part09.rs  part10.rs  part100.rs  part101.rs  part102.rs  part103.rs  part104.rs  part105.rs  part106.rs  part107.rs  part108.rs  part109.rs  part11.rs  part110.rs  part111.rs  part112.rs  part113.rs  part114.rs  part115.rs  part116.rs  part117.rs  part118.rs  part119.rs  part12.rs  part120.rs  part121.rs  part122.rs  part123.rs  part124.rs  part125.rs  (+126 more)
crates/maw-cli/src/serve_core/: engine.rs  mod.rs
crates/maw-cli/src/serve_core/modules/: agents.rs  debug.rs  federation.rs  identity.rs  mod.rs  pair.rs  thread_store.rs  triggers.rs  triggers_mutate.rs  views.rs  worktrees.rs  ws.rs
crates/maw-cli/tests/: activity_native.rs  attach_alias_plan.rs  auth_consent_pair_cli_parser_coverage.rs  auth_from_sign_payload_plan.rs  auth_hmac_verify_plan.rs  auth_loopback_plan.rs  auth_plan.rs  auth_sign_headers_plan.rs  auth_verify_legacy_from_plan.rs  auth_verify_request_d2.rs  auth_verify_v1_plan.rs  auth_verify_v3_from_plan.rs  auto_wake_constants_plan.rs  auto_wake_plan.rs  bind_host_constants_plan.rs  bring_plan.rs  calver_constants_plan.rs  calver_plan.rs  cli_auth_parser_matrix.rs  cli_binary_smoke_coverage.rs  cli_branch_coverage_plan.rs  cli_core_impl_line_coverage_ba23016.rs  cli_core_impl_part20_27_gap_coverage.rs  cli_cov_agent_cli_0308.rs  cli_coverage_slice_a.rs  cli_coverage_slice_b.rs  cli_coverage_slice_c.rs  cli_coverage_slice_d.rs  cli_coverage_slice_e.rs  cli_coverage_slice_f.rs  cli_coverage_slice_local.rs  cli_plugin_dispatch.rs  cli_remaining_coverage_targets.rs  cli_tail_final_coverage.rs  cli_text_and_error_branches_plan.rs  cli_text_and_usage_coverage.rs  consent_approval_plan.rs  consent_cleanup_plan.rs  consent_constants_plan.rs  consent_pending_read_plan.rs  (+123 more)
crates/maw-cli/tests/cli_coverage_slice_a/: part01.rs  part02.rs
crates/maw-cli/tests/cli_coverage_slice_b/: part01.rs  part02.rs
crates/maw-cli/tests/cli_coverage_slice_local/: part01.rs  part02.rs
crates/maw-cli/tests/cli_text_and_error_branches_plan/: part01.rs  part02.rs
crates/maw-cli/tests/fixtures/auth302/: verify-request-d2-loopback.stdout
crates/maw-cli/tests/fixtures/epic55/: activity-idle-json.stdout  follow-fake.stdout  init-help.stdout  peers-add-list.stdout  peers-list-empty.stdout  token-list.stdout  token-use.stdout
crates/maw-cli/tests/fixtures/epic56/: attach-local-plan.stdout  attach-ssh-dry-run.stdout  split-dry-run.stdout  view-readonly-plan.stdout
crates/maw-cli/tests/fixtures/locate/: atlas.json
crates/maw-cli/tests/fixtures/native-absorb/: dry-run.stdout
crates/maw-cli/tests/fixtures/native-agents/: node-edge.stdout
crates/maw-cli/tests/fixtures/native-archive/: archive-dry-run.stdout  archive-help.stdout  soul-sync.stdout
crates/maw-cli/tests/fixtures/native-artifacts/: list.json
crates/maw-cli/tests/fixtures/native-assign/: assign-explicit.stdout
crates/maw-cli/tests/fixtures/native-atlas/: atlas-default.stdout
crates/maw-cli/tests/fixtures/native-audit/: audit-anomalies.stdout  audit-tail.stdout  audit.jsonl
crates/maw-cli/tests/fixtures/native-awaken/: awaken-dry-run.stdout
crates/maw-cli/tests/fixtures/native-broadcast/: session.stdout
crates/maw-cli/tests/fixtures/native-bud/: bud-dry-run.stdout
crates/maw-cli/tests/fixtures/native-channel/: channel-add-fakechat.stdout  channel-add-telegram.stdout  channel-add.stdout  channel-help.stdout  channel-list-json.stdout  channel-ls.stdout  channel-migrate-dry-run.stdout  channel-migrate-empty.stdout  channel-migrate-existing.stdout  channel-migrate-no-global.stdout  channel-migrate-no-repo.stdout  channel-migrate-one.stdout  channel-migrate-remove-global.stdout  channel-migrate-usage.stderr  channel-providers.stdout  channel-rm-all.stdout  channel-rm-plugin.stdout  channel-setup-discord-wrong-guild.stdout  (+6 more)
crates/maw-cli/tests/plugin_manifest_plan/: part01.rs  part02.rs
crates/maw-discord/: Cargo.toml
crates/maw-discord/src/: gateway.rs  lib.rs
crates/maw-discord/src/gateway/: mock.rs  tests.rs  types.rs
crates/maw-peer/: Cargo.toml
crates/maw-peer/src/: lib.rs
crates/maw-peer/src/core_impl/: mod.rs  part01.rs  part02.rs  part03.rs  part04.rs  tofu_pubkey.rs
crates/maw-peer/tests/: coverage_tail_part02_03.rs  peer_cmd_tofu.rs  peer_impl_helpers.rs  portable_fixtures.rs  probe_all.rs  probe_all_tail.rs  probe_helpers.rs  probe_peer_plan.rs  stale_peer_store.rs  tofu.rs
crates/maw-peer/tests/stale_peer_store/: part01.rs  part02.rs  stale_eval_tests.rs  stale_removal_tests.rs
crates/maw-plugin-manifest/: Cargo.toml
crates/maw-plugin-manifest/src/: lib.rs
crates/maw-plugin-manifest/src/core_impl/: manifest_parse_optional.rs  manifest_types.rs  manifest_validate.rs  mod.rs  part01.rs  part02.rs  part03.rs  part04.rs  part05.rs  part06.rs  part07.rs
crates/maw-plugin-manifest/tests/: bun_invoke_runtime.rs  ffi_tier1.rs  manifest_line_coverage.rs  manifest_load.rs  manifest_parse.rs  manifest_remaining_coverage.rs  manifest_tail_part03.rs  manifest_validate_edges.rs  mvp_wasm_gap_coverage.rs  mvp_wasm_invoke.rs  mvp_wasm_tail.rs  no_bun_runtime.rs  plugin_coverage_tail.rs  registry_discover.rs  registry_import_symbol.rs  registry_invoke.rs  wasm_host_security.rs  wasm_parity_harness.rs
crates/maw-plugin-manifest/tests/manifest_validate_edges/: part01.rs  validate_cli_api_hooks_tests.rs  validate_enum_coverage_tests.rs
crates/maw-transport/: Cargo.toml
crates/maw-transport/src/: lib.rs
crates/maw-transport/src/core_impl/: mod.rs  part01.rs  part02.rs  part03.rs  part04.rs  part05.rs  part06.rs  tmux_transport_tests.rs  wasm_http_adapter.rs
crates/maw-transport/tests/: hey_http_client.rs  portable_fixtures.rs
crates/maw-transport/tests/fixtures/: transport-router.fixtures.json
(+394 files in other folders)
