[workspace]
members = ["crates/maw-matcher", "crates/maw-calver", "crates/maw-policy", "crates/maw-worktree", "crates/maw-transport", "crates/maw-routing", "crates/maw-tmux", "crates/maw-identity", "crates/maw-bring", "crates/maw-split", "crates/maw-peer", "crates/maw-hub", "crates/maw-feed"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/Soul-Brews-Studio/maw-rs"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
