[package]
name = "maw-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "maw-rs"
path = "src/main.rs"

[dependencies]
maw-bring = { path = "../maw-bring" }
maw-calver = { path = "../maw-calver" }
maw-matcher = { path = "../maw-matcher" }
maw-peer = { path = "../maw-peer" }
maw-routing = { path = "../maw-routing" }
maw-split = { path = "../maw-split" }
maw-worktree = { path = "../maw-worktree" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
