[package]
name = "maw-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "maw-rs"
path = "src/main.rs"

[dependencies]
maw-auth = { path = "../maw-auth" }
maw-bring = { path = "../maw-bring" }
maw-bind = { path = "../maw-bind" }
maw-calver = { path = "../maw-calver" }
maw-feed = { path = "../maw-feed" }
maw-fuzzy = { path = "../maw-fuzzy" }
maw-identity = { path = "../maw-identity" }
maw-hub = { path = "../maw-hub" }
maw-matcher = { path = "../maw-matcher" }
maw-peer = { path = "../maw-peer" }
maw-policy = { path = "../maw-policy" }
maw-routing = { path = "../maw-routing" }
maw-split = { path = "../maw-split" }
maw-transport = { path = "../maw-transport" }
maw-worktree = { path = "../maw-worktree" }
maw-xdg = { path = "../maw-xdg" }
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
