[package]
name = "maw-cli"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "maw-rs"
path = "src/main.rs"

[dependencies]
maw-auto-wake = { path = "../maw-auto-wake" }
maw-auth = { path = "../maw-auth" }
maw-bring = { path = "../maw-bring" }
maw-bind = { path = "../maw-bind" }
maw-calver = { path = "../maw-calver" }
maw-discord = { path = "../maw-discord" }
maw-feed = { path = "../maw-feed" }
maw-fuzzy = { path = "../maw-fuzzy" }
maw-identity = { path = "../maw-identity" }
maw-hub = { path = "../maw-hub" }
maw-matcher = { path = "../maw-matcher" }
maw-peer = { path = "../maw-peer" }
maw-plugin-manifest = { path = "../maw-plugin-manifest" }
maw-plugin-scaffold = { path = "../maw-plugin-scaffold" }
maw-policy = { path = "../maw-policy" }
maw-routing = { path = "../maw-routing" }
maw-split = { path = "../maw-split" }
maw-tmux = { path = "../maw-tmux" }
maw-transport = { path = "../maw-transport" }
maw-worktree = { path = "../maw-worktree" }
maw-xdg = { path = "../maw-xdg" }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "query", "ws"] }
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
tokio.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
