[package]
name = "maw-discord"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true

[lints]
workspace = true
