[package]
name = "maw-discord"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
twilight-gateway = { version = "0.17.1", default-features = false, features = ["rustls-webpki-roots"] }
twilight-model = "0.17.1"

[lints]
workspace = true
