[package]
name = "maw-peer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
maw-xdg = { path = "../maw-xdg" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[lints]
workspace = true
