[package]
name = "maw-plugin-manifest"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64 = "0.22"
extism = "1.30.0"
maw-tmux = { path = "../maw-tmux" }
maw-transport = { path = "../maw-transport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio.workspace = true
url = "2"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[lints]
workspace = true
